# bot-tom

./: .gitignore  Cargo.toml  README.md
configuration/: base.toml
src/: audio.rs  configuration.rs  event_handler.rs  lib.rs  main.rs  scheduler.rs  startup.rs  telemetry.rs
src/command/general/: mod.rs  play.rs
src/commands/: mod.rs
src/commands/general/: play.rs
src/task/: cenzo.rs  mod.rs
