[package]
name = "bot-tom"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
shuttle-service = { version = "0.5.2", features = ["bot-serenity", "sqlx-postgres", "secrets"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "voice", "cache"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = "1.21.1"
chrono = "0.4.22"
delay_timer = "0.11.3"
smol = "1.2.5"
songbird = "0.3.0"
tracing-subscriber = "0.3.15"
config = "0.13.2"
serde = { version = "1.0.144", features = ["derive"] }
rand = "0.8.5"
anyhow = "1.0.65"
url = "2.3.1"
