[package]
name = "bot-tom"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "voice", "cache"] }
tokio = "1.21.1"
chrono = "0.4.22"
delay_timer = "0.11.3"
songbird = "0.3.0"
config = "0.13.2"
serde = { version = "1.0.144", features = ["derive"] }
rand = "0.8.5"
anyhow = "1.0.65"
url = "2.3.1"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-log = "0.1.3"
